test/test_examples/syntactic_examples/syntax_error/error_fun_def_01.zig
// Syntax error: missing "pub" token

const ifj = @import("ifj24.zig"); 

fn main() void {

}  